# tddc78

./: .gitignore  README.md
lab1/: CMakeLists.txt  bench.sh  blur_filter.c  blur_filter.h  blur_main.c  lab1_blur  lab1_thre  main.c  mpi_env.c  mpi_env.h  out.csv  shared_com.c  shared_com.h  test.ppm  test2.ppm  threshold_filter.c  threshold_filter.h  threshold_main.c  types.c  types.h
lab1/filters/: Makefile  ppmio.c  thresc  thresmain.c
lab1/filters_original/: blurfilter.c  ppm.c
lab2/: CMakeLists.txt  bench.sh  blur_filter.c  blur_filter.h  blur_main.c  cmake.sh  image.c  image.h  lab2_blur  lab2_thre  main.c  pthread_barrier.c  pthread_barrier.h  thre_main.c
lab2/filters/: blurmain.c
lab2/filters_original/: blurc  ppmio.c  ppmio.h
lab3/: Makefile  bench.sh  laplsolv  laplsolv.f90  laplsolv_orig.f90
lab5/: CMakeLists.txt  cmake.sh  main.cpp  mpi_env.cpp  mpi_env.h
